# intuitivecare-teste-nivelamento

./: docker-compose.yml  pyproject.toml
data/csv/: output.csv  procedimentos.csv
src/data_transformation/: compress.py  main.py
src/data_transformation/data/interfaces/: interface_extract_tables_repository.py
src/data_transformation/data/use_cases/: extract_tables_use_case.py
src/data_transformation/domain/interfaces/: interface_extract_tables_use_case.py
src/data_transformation/infra/drivers/: pandas_driver.py  pdfplumber_driver.py
src/data_transformation/infra/repositories/: extract_tables_repository.py
src/data_transformation/presentation/controllers/: controller.py  controller_extract.py
src/db_test/data/interfaces/: interface_data_importer_repository.py  interface_list_operadoras_ultimo_ano_repository.py  interface_list_operadoras_ultimo_trimestre_repository.py  interface_operadora_repository.py
src/db_test/data/use_cases/: data_importer_use_case.py  list_operadoras_ultimo_ano_use_case.py  list_operadoras_ultimo_trimestres_use_case.py  operadora_use_case.py
src/db_test/domain/interfaces/: interface_data_importer_use_case.py  interface_list_operadoras_ultimo_ano_use_case.py  interface_list_operadoras_ultimo_trimestre_use_case.py  interface_operadora_use_case.py
src/db_test/infra/entities/: demonstracoes_contabeis.py  operadoras_ativas.py
src/main/adapters/: request_adapter.py
src/main/routes/: data_transformation.py  db_test.py  web_scraping.py
src/main/server/: server.py
src/web_scraping/: compress.py  download.py
(+31 files in other folders)
