[project]
name = "teste-nivelamento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "rarfile>=4.2",
    "requests>=2.32.3",
    "ruff>=0.11.2",
]
